# Advent-of-Code-2025

./: .gitignore  README.md  boilerplate.py  download_input.py  main.py  pyproject.toml
aoc2024/day12/: day12.py
aoc2024/day14/: day14.py
aoc2024/day9/: day9.py
aoc2025/day1/: day1.py
aoc2025/day4/: day4.py
aoc2025/day5/: day5.py
aoc2025/utils/: utils.py
